package com.kna.vstay.repository;

public interface PaymentRepository {
}
