package com.kna.vstay.repository;

public interface UserRepository {
}
