package com.kna.vstay.repository;

public interface VillaRepository {
}
